qt6/gen_qlineedit.h

typedef struct QAction QAction;
typedef struct QCompleter QCompleter;
typedef struct QEvent QEvent;
typedef struct QIcon QIcon;
typedef struct QLineEdit QLineEdit;
typedef struct QMargins QMargins;
typedef struct QMenu QMenu;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QPoint QPoint;
typedef struct QSize QSize;
typedef struct QTimerEvent QTimerEvent;
typedef struct QValidator QValidator;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
QLineEdit* QLineEdit_new(QWidget* parent);
QLineEdit* QLineEdit_new2();
QLineEdit* QLineEdit_new3(struct miqt_string param1);
QLineEdit* QLineEdit_new4(struct miqt_string param1, QWidget* parent);
QMetaObject* QLineEdit_metaObject(const QLineEdit* self);
void* QLineEdit_metacast(QLineEdit* self, const char* param1);
int QLineEdit_metacall(QLineEdit* self, int param1, int param2, void** param3);
struct miqt_string QLineEdit_tr(const char* s);
struct miqt_string QLineEdit_text(const QLineEdit* self);
struct miqt_string QLineEdit_displayText(const QLineEdit* self);
struct miqt_string QLineEdit_placeholderText(const QLineEdit* self);
void QLineEdit_setPlaceholderText(QLineEdit* self, struct miqt_string placeholderText);
int QLineEdit_maxLength(const QLineEdit* self);
void QLineEdit_setMaxLength(QLineEdit* self, int maxLength);
void QLineEdit_setFrame(QLineEdit* self, bool frame);
bool QLineEdit_hasFrame(const QLineEdit* self);
void QLineEdit_setClearButtonEnabled(QLineEdit* self, bool enable);
bool QLineEdit_isClearButtonEnabled(const QLineEdit* self);
int QLineEdit_echoMode(const QLineEdit* self);
void QLineEdit_setEchoMode(QLineEdit* self, int echoMode);
bool QLineEdit_isReadOnly(const QLineEdit* self);
void QLineEdit_setReadOnly(QLineEdit* self, bool readOnly);
void QLineEdit_setValidator(QLineEdit* self, QValidator* validator);
QValidator* QLineEdit_validator(const QLineEdit* self);
void QLineEdit_setCompleter(QLineEdit* self, QCompleter* completer);
QCompleter* QLineEdit_completer(const QLineEdit* self);
QSize* QLineEdit_sizeHint(const QLineEdit* self);
QSize* QLineEdit_minimumSizeHint(const QLineEdit* self);
int QLineEdit_cursorPosition(const QLineEdit* self);
void QLineEdit_setCursorPosition(QLineEdit* self, int cursorPosition);
int QLineEdit_cursorPositionAt(QLineEdit* self, QPoint* pos);
void QLineEdit_setAlignment(QLineEdit* self, int flag);
int QLineEdit_alignment(const QLineEdit* self);
void QLineEdit_cursorForward(QLineEdit* self, bool mark);
void QLineEdit_cursorBackward(QLineEdit* self, bool mark);
void QLineEdit_cursorWordForward(QLineEdit* self, bool mark);
void QLineEdit_cursorWordBackward(QLineEdit* self, bool mark);
void QLineEdit_backspace(QLineEdit* self);
void QLineEdit_del(QLineEdit* self);
void QLineEdit_home(QLineEdit* self, bool mark);
void QLineEdit_end(QLineEdit* self, bool mark);
bool QLineEdit_isModified(const QLineEdit* self);
void QLineEdit_setModified(QLineEdit* self, bool modified);
void QLineEdit_setSelection(QLineEdit* self, int param1, int param2);
bool QLineEdit_hasSelectedText(const QLineEdit* self);
struct miqt_string QLineEdit_selectedText(const QLineEdit* self);
int QLineEdit_selectionStart(const QLineEdit* self);
int QLineEdit_selectionEnd(const QLineEdit* self);
int QLineEdit_selectionLength(const QLineEdit* self);
bool QLineEdit_isUndoAvailable(const QLineEdit* self);
bool QLineEdit_isRedoAvailable(const QLineEdit* self);
void QLineEdit_setDragEnabled(QLineEdit* self, bool b);
bool QLineEdit_dragEnabled(const QLineEdit* self);
void QLineEdit_setCursorMoveStyle(QLineEdit* self, int style);
int QLineEdit_cursorMoveStyle(const QLineEdit* self);
struct miqt_string QLineEdit_inputMask(const QLineEdit* self);
void QLineEdit_setInputMask(QLineEdit* self, struct miqt_string inputMask);
bool QLineEdit_hasAcceptableInput(const QLineEdit* self);
void QLineEdit_setTextMargins(QLineEdit* self, int left, int top, int right, int bottom);
void QLineEdit_setTextMarginsWithMargins(QLineEdit* self, QMargins* margins);
QMargins* QLineEdit_textMargins(const QLineEdit* self);
void QLineEdit_addAction(QLineEdit* self, QAction* action, int position);
QAction* QLineEdit_addAction2(QLineEdit* self, QIcon* icon, int position);
void QLineEdit_setText(QLineEdit* self, struct miqt_string text);
void QLineEdit_clear(QLineEdit* self);
void QLineEdit_selectAll(QLineEdit* self);
void QLineEdit_undo(QLineEdit* self);
void QLineEdit_redo(QLineEdit* self);
void QLineEdit_cut(QLineEdit* self);
void QLineEdit_copy(const QLineEdit* self);
void QLineEdit_paste(QLineEdit* self);
void QLineEdit_deselect(QLineEdit* self);
void QLineEdit_insert(QLineEdit* self, struct miqt_string param1);
QMenu* QLineEdit_createStandardContextMenu(QLineEdit* self);
void QLineEdit_textChanged(QLineEdit* self, struct miqt_string param1);
void QLineEdit_connect_textChanged(QLineEdit* self, intptr_t slot);
void QLineEdit_textEdited(QLineEdit* self, struct miqt_string param1);
void QLineEdit_connect_textEdited(QLineEdit* self, intptr_t slot);
void QLineEdit_cursorPositionChanged(QLineEdit* self, int param1, int param2);
void QLineEdit_connect_cursorPositionChanged(QLineEdit* self, intptr_t slot);
void QLineEdit_returnPressed(QLineEdit* self);
void QLineEdit_connect_returnPressed(QLineEdit* self, intptr_t slot);
void QLineEdit_editingFinished(QLineEdit* self);
void QLineEdit_connect_editingFinished(QLineEdit* self, intptr_t slot);
void QLineEdit_selectionChanged(QLineEdit* self);
void QLineEdit_connect_selectionChanged(QLineEdit* self, intptr_t slot);
void QLineEdit_inputRejected(QLineEdit* self);
void QLineEdit_connect_inputRejected(QLineEdit* self, intptr_t slot);
QVariant* QLineEdit_inputMethodQuery(const QLineEdit* self, int param1);
QVariant* QLineEdit_inputMethodQuery2(const QLineEdit* self, int property, QVariant* argument);
void QLineEdit_timerEvent(QLineEdit* self, QTimerEvent* param1);
bool QLineEdit_event(QLineEdit* self, QEvent* param1);
struct miqt_string QLineEdit_tr2(const char* s, const char* c);
struct miqt_string QLineEdit_tr3(const char* s, const char* c, int n);
void QLineEdit_cursorForward2(QLineEdit* self, bool mark, int steps);
void QLineEdit_cursorBackward2(QLineEdit* self, bool mark, int steps);
bool QLineEdit_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QLineEdit_virtualbase_metaObject(const void* self);
bool QLineEdit_override_virtual_metacast(void* self, intptr_t slot);
void* QLineEdit_virtualbase_metacast(void* self, const char* param1);
bool QLineEdit_override_virtual_metacall(void* self, intptr_t slot);
int QLineEdit_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QLineEdit_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QLineEdit_virtualbase_sizeHint(const void* self);
bool QLineEdit_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QLineEdit_virtualbase_minimumSizeHint(const void* self);
bool QLineEdit_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QLineEdit_virtualbase_mousePressEvent(void* self, QMouseEvent* param1);
bool QLineEdit_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QLineEdit_virtualbase_mouseMoveEvent(void* self, QMouseEvent* param1);
bool QLineEdit_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QLineEdit_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* param1);
void QLineEdit_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* param1);