qt6/gen_qlineedit.nim


proc fcQLineEdit_new(parent: pointer): ptr cQLineEdit {.importc: "QLineEdit_new".}
proc fcQLineEdit_new2(): ptr cQLineEdit {.importc: "QLineEdit_new2".}
proc fcQLineEdit_new3(param1: struct_miqt_string): ptr cQLineEdit {.importc: "QLineEdit_new3".}
proc fcQLineEdit_new4(param1: struct_miqt_string, parent: pointer): ptr cQLineEdit {.importc: "QLineEdit_new4".}
proc fcQLineEdit_metaObject(self: pointer, ): pointer {.importc: "QLineEdit_metaObject".}
proc fcQLineEdit_metacast(self: pointer, param1: cstring): pointer {.importc: "QLineEdit_metacast".}
proc fcQLineEdit_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QLineEdit_metacall".}
proc fcQLineEdit_tr(s: cstring): struct_miqt_string {.importc: "QLineEdit_tr".}
proc fcQLineEdit_text(self: pointer, ): struct_miqt_string {.importc: "QLineEdit_text".}
proc fcQLineEdit_displayText(self: pointer, ): struct_miqt_string {.importc: "QLineEdit_displayText".}
proc fcQLineEdit_placeholderText(self: pointer, ): struct_miqt_string {.importc: "QLineEdit_placeholderText".}
proc fcQLineEdit_setPlaceholderText(self: pointer, placeholderText: struct_miqt_string): void {.importc: "QLineEdit_setPlaceholderText".}
proc fcQLineEdit_maxLength(self: pointer, ): cint {.importc: "QLineEdit_maxLength".}
proc fcQLineEdit_setMaxLength(self: pointer, maxLength: cint): void {.importc: "QLineEdit_setMaxLength".}
proc fcQLineEdit_setFrame(self: pointer, frame: bool): void {.importc: "QLineEdit_setFrame".}
proc fcQLineEdit_hasFrame(self: pointer, ): bool {.importc: "QLineEdit_hasFrame".}
proc fcQLineEdit_setClearButtonEnabled(self: pointer, enable: bool): void {.importc: "QLineEdit_setClearButtonEnabled".}
proc fcQLineEdit_isClearButtonEnabled(self: pointer, ): bool {.importc: "QLineEdit_isClearButtonEnabled".}
proc fcQLineEdit_echoMode(self: pointer, ): cint {.importc: "QLineEdit_echoMode".}
proc fcQLineEdit_setEchoMode(self: pointer, echoMode: cint): void {.importc: "QLineEdit_setEchoMode".}
proc fcQLineEdit_isReadOnly(self: pointer, ): bool {.importc: "QLineEdit_isReadOnly".}
proc fcQLineEdit_setReadOnly(self: pointer, readOnly: bool): void {.importc: "QLineEdit_setReadOnly".}
proc fcQLineEdit_setValidator(self: pointer, validator: pointer): void {.importc: "QLineEdit_setValidator".}
proc fcQLineEdit_validator(self: pointer, ): pointer {.importc: "QLineEdit_validator".}
proc fcQLineEdit_setCompleter(self: pointer, completer: pointer): void {.importc: "QLineEdit_setCompleter".}
proc fcQLineEdit_completer(self: pointer, ): pointer {.importc: "QLineEdit_completer".}
proc fcQLineEdit_sizeHint(self: pointer, ): pointer {.importc: "QLineEdit_sizeHint".}
proc fcQLineEdit_minimumSizeHint(self: pointer, ): pointer {.importc: "QLineEdit_minimumSizeHint".}
proc fcQLineEdit_cursorPosition(self: pointer, ): cint {.importc: "QLineEdit_cursorPosition".}
proc fcQLineEdit_setCursorPosition(self: pointer, cursorPosition: cint): void {.importc: "QLineEdit_setCursorPosition".}
proc fcQLineEdit_cursorPositionAt(self: pointer, pos: pointer): cint {.importc: "QLineEdit_cursorPositionAt".}
proc fcQLineEdit_setAlignment(self: pointer, flag: cint): void {.importc: "QLineEdit_setAlignment".}
proc fcQLineEdit_alignment(self: pointer, ): cint {.importc: "QLineEdit_alignment".}
proc fcQLineEdit_cursorForward(self: pointer, mark: bool): void {.importc: "QLineEdit_cursorForward".}
proc fcQLineEdit_cursorBackward(self: pointer, mark: bool): void {.importc: "QLineEdit_cursorBackward".}
proc fcQLineEdit_cursorWordForward(self: pointer, mark: bool): void {.importc: "QLineEdit_cursorWordForward".}
proc fcQLineEdit_cursorWordBackward(self: pointer, mark: bool): void {.importc: "QLineEdit_cursorWordBackward".}
proc fcQLineEdit_backspace(self: pointer, ): void {.importc: "QLineEdit_backspace".}
proc fcQLineEdit_del(self: pointer, ): void {.importc: "QLineEdit_del".}
proc fcQLineEdit_home(self: pointer, mark: bool): void {.importc: "QLineEdit_home".}
proc fcQLineEdit_endX(self: pointer, mark: bool): void {.importc: "QLineEdit_end".}
proc fcQLineEdit_isModified(self: pointer, ): bool {.importc: "QLineEdit_isModified".}
proc fcQLineEdit_setModified(self: pointer, modified: bool): void {.importc: "QLineEdit_setModified".}
proc fcQLineEdit_setSelection(self: pointer, param1: cint, param2: cint): void {.importc: "QLineEdit_setSelection".}
proc fcQLineEdit_hasSelectedText(self: pointer, ): bool {.importc: "QLineEdit_hasSelectedText".}
proc fcQLineEdit_selectedText(self: pointer, ): struct_miqt_string {.importc: "QLineEdit_selectedText".}
proc fcQLineEdit_selectionStart(self: pointer, ): cint {.importc: "QLineEdit_selectionStart".}
proc fcQLineEdit_selectionEnd(self: pointer, ): cint {.importc: "QLineEdit_selectionEnd".}
proc fcQLineEdit_selectionLength(self: pointer, ): cint {.importc: "QLineEdit_selectionLength".}
proc fcQLineEdit_isUndoAvailable(self: pointer, ): bool {.importc: "QLineEdit_isUndoAvailable".}
proc fcQLineEdit_isRedoAvailable(self: pointer, ): bool {.importc: "QLineEdit_isRedoAvailable".}
proc fcQLineEdit_setDragEnabled(self: pointer, b: bool): void {.importc: "QLineEdit_setDragEnabled".}
proc fcQLineEdit_dragEnabled(self: pointer, ): bool {.importc: "QLineEdit_dragEnabled".}
proc fcQLineEdit_setCursorMoveStyle(self: pointer, style: cint): void {.importc: "QLineEdit_setCursorMoveStyle".}
proc fcQLineEdit_cursorMoveStyle(self: pointer, ): cint {.importc: "QLineEdit_cursorMoveStyle".}
proc fcQLineEdit_inputMask(self: pointer, ): struct_miqt_string {.importc: "QLineEdit_inputMask".}
proc fcQLineEdit_setInputMask(self: pointer, inputMask: struct_miqt_string): void {.importc: "QLineEdit_setInputMask".}
proc fcQLineEdit_hasAcceptableInput(self: pointer, ): bool {.importc: "QLineEdit_hasAcceptableInput".}
proc fcQLineEdit_setTextMargins(self: pointer, left: cint, top: cint, right: cint, bottom: cint): void {.importc: "QLineEdit_setTextMargins".}
proc fcQLineEdit_setTextMarginsWithMargins(self: pointer, margins: pointer): void {.importc: "QLineEdit_setTextMarginsWithMargins".}
proc fcQLineEdit_textMargins(self: pointer, ): pointer {.importc: "QLineEdit_textMargins".}
proc fcQLineEdit_addAction(self: pointer, action: pointer, position: cint): void {.importc: "QLineEdit_addAction".}
proc fcQLineEdit_addAction2(self: pointer, icon: pointer, position: cint): pointer {.importc: "QLineEdit_addAction2".}
proc fcQLineEdit_setText(self: pointer, text: struct_miqt_string): void {.importc: "QLineEdit_setText".}
proc fcQLineEdit_clear(self: pointer, ): void {.importc: "QLineEdit_clear".}
proc fcQLineEdit_selectAll(self: pointer, ): void {.importc: "QLineEdit_selectAll".}
proc fcQLineEdit_undo(self: pointer, ): void {.importc: "QLineEdit_undo".}
proc fcQLineEdit_redo(self: pointer, ): void {.importc: "QLineEdit_redo".}
proc fcQLineEdit_cut(self: pointer, ): void {.importc: "QLineEdit_cut".}
proc fcQLineEdit_copy(self: pointer, ): void {.importc: "QLineEdit_copy".}
proc fcQLineEdit_paste(self: pointer, ): void {.importc: "QLineEdit_paste".}
proc fcQLineEdit_deselect(self: pointer, ): void {.importc: "QLineEdit_deselect".}
proc fcQLineEdit_insert(self: pointer, param1: struct_miqt_string): void {.importc: "QLineEdit_insert".}
proc fcQLineEdit_createStandardContextMenu(self: pointer, ): pointer {.importc: "QLineEdit_createStandardContextMenu".}
proc fcQLineEdit_textChanged(self: pointer, param1: struct_miqt_string): void {.importc: "QLineEdit_textChanged".}
proc fQLineEdit_connect_textChanged(self: pointer, slot: int) {.importc: "QLineEdit_connect_textChanged".}
proc fcQLineEdit_textEdited(self: pointer, param1: struct_miqt_string): void {.importc: "QLineEdit_textEdited".}
proc fQLineEdit_connect_textEdited(self: pointer, slot: int) {.importc: "QLineEdit_connect_textEdited".}
proc fcQLineEdit_cursorPositionChanged(self: pointer, param1: cint, param2: cint): void {.importc: "QLineEdit_cursorPositionChanged".}
proc fQLineEdit_connect_cursorPositionChanged(self: pointer, slot: int) {.importc: "QLineEdit_connect_cursorPositionChanged".}
proc fcQLineEdit_returnPressed(self: pointer, ): void {.importc: "QLineEdit_returnPressed".}
proc fQLineEdit_connect_returnPressed(self: pointer, slot: int) {.importc: "QLineEdit_connect_returnPressed".}
proc fcQLineEdit_editingFinished(self: pointer, ): void {.importc: "QLineEdit_editingFinished".}
proc fQLineEdit_connect_editingFinished(self: pointer, slot: int) {.importc: "QLineEdit_connect_editingFinished".}
proc fcQLineEdit_selectionChanged(self: pointer, ): void {.importc: "QLineEdit_selectionChanged".}
proc fQLineEdit_connect_selectionChanged(self: pointer, slot: int) {.importc: "QLineEdit_connect_selectionChanged".}
proc fcQLineEdit_inputRejected(self: pointer, ): void {.importc: "QLineEdit_inputRejected".}
proc fQLineEdit_connect_inputRejected(self: pointer, slot: int) {.importc: "QLineEdit_connect_inputRejected".}
proc fcQLineEdit_inputMethodQuery(self: pointer, param1: cint): pointer {.importc: "QLineEdit_inputMethodQuery".}
proc fcQLineEdit_inputMethodQuery2(self: pointer, property: cint, argument: pointer): pointer {.importc: "QLineEdit_inputMethodQuery2".}
proc fcQLineEdit_timerEvent(self: pointer, param1: pointer): void {.importc: "QLineEdit_timerEvent".}
proc fcQLineEdit_event(self: pointer, param1: pointer): bool {.importc: "QLineEdit_event".}
proc fcQLineEdit_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QLineEdit_tr2".}
proc fcQLineEdit_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QLineEdit_tr3".}
proc fcQLineEdit_cursorForward2(self: pointer, mark: bool, steps: cint): void {.importc: "QLineEdit_cursorForward2".}
proc fcQLineEdit_cursorBackward2(self: pointer, mark: bool, steps: cint): void {.importc: "QLineEdit_cursorBackward2".}
proc fQLineEdit_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QLineEdit_virtualbase_metaObject".}
proc fcQLineEdit_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_metaObject".}
proc fQLineEdit_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QLineEdit_virtualbase_metacast".}
proc fcQLineEdit_override_virtual_metacast(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_metacast".}
proc fQLineEdit_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QLineEdit_virtualbase_metacall".}
proc fcQLineEdit_override_virtual_metacall(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_metacall".}
proc fQLineEdit_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QLineEdit_virtualbase_sizeHint".}
proc fcQLineEdit_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_sizeHint".}
proc fQLineEdit_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QLineEdit_virtualbase_minimumSizeHint".}
proc fcQLineEdit_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_minimumSizeHint".}
proc fQLineEdit_virtualbase_mousePressEvent(self: pointer, param1: pointer): void{.importc: "QLineEdit_virtualbase_mousePressEvent".}
proc fcQLineEdit_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_mousePressEvent".}
proc fQLineEdit_virtualbase_mouseMoveEvent(self: pointer, param1: pointer): void{.importc: "QLineEdit_virtualbase_mouseMoveEvent".}
proc fcQLineEdit_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_mouseMoveEvent".}
proc fQLineEdit_virtualbase_mouseReleaseEvent(self: pointer, param1: pointer): void{.importc: "QLineEdit_virtualbase_mouseReleaseEvent".}
proc fcQLineEdit_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QLineEdit_override_virtual_mouseReleaseEvent".}
proc fQLineEdit_virtualbase_mouseDoubleClickEvent(self: pointer, param1: pointer): void{.importc: "QLineEdit_virtualbase_mouseDoubleClickEvent".}
